# chatbot

./: .gitignore  README.md  app.py  langchain.ipynb  pyproject.toml
src/chatbot/: config.py  core.py  main.py  ui.py
src/chatbot/tools/: base.py  calculator.py  file_system.py  registry.py  weather.py
